# gccp-cnn-flask

./: app.py  crapguru_streamlit.py  dockerfile  pyproject.toml
static/js/: index_.js
templates/: home.html  index.html  info.html
