[tool.poetry]
name = "gccp-proj"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "gccp_proj"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Flask = "^2.2.2"
Pillow = "^9.3.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
